# ChangeLog for sys-apps/gawk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.100 2007/04/01 10:16:10 hansmi Exp $

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org> gawk-3.1.5-r3.ebuild:
  Stable on ppc.

  21 Mar 2007; Raúl Porcel <armin76@gentoo.org> gawk-3.1.5-r3.ebuild:
  x86 stable

*gawk-3.1.5-r3 (12 Jan 2007)

  12 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +files/gawk-3.1.5-freewstr.patch, +files/gawk-3.1.5-wconcat.patch,
  +gawk-3.1.5-r3.ebuild:
  Grab some patches from Fedora to fixup double free #135931 by Georgi Georgiev.

  05 Nov 2006; Fabian Groffen <grobian@gentoo.org> gawk-3.1.5-r1.ebuild,
  gawk-3.1.5-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> gawk-3.1.5-r2.ebuild:
  Added ~sparc-fbsd keyword.

  14 Oct 2006; Aron Griffis <agriffis@gentoo.org> gawk-3.1.5-r2.ebuild:
  Mark 3.1.5-r2 stable on ia64

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> gawk-3.1.5-r2.ebuild:
  Marked stable on mips.

  22 Aug 2006; Thomas Cort <tcort@gentoo.org> gawk-3.1.5-r2.ebuild:
  Stable on alpha wrt Bug #142936.

  10 Aug 2006; Yuta SATOH <nigoro@gentoo.org> gawk-3.1.5-r2.ebuild:
  Stable on ppc64, bug #142936

  07 Aug 2006; Scott Stoddard <deltacow@gentoo.org> gawk-3.1.5-r2.ebuild:
  Stable on amd64 re bug 142936.

  07 Aug 2006; Luca Barbato <lu_zero@gentoo.org> gawk-3.1.5-r2.ebuild:
  Marked ppc

  07 Aug 2006; Jeroen Roovers <jer@gentoo.org> gawk-3.1.5-r2.ebuild:
  Stable for HPPA (bug #142936).

  06 Aug 2006; Andrej Kacian <ticho@gentoo.org> gawk-3.1.5-r2.ebuild:
  Stable on x86, bug #142936.

  06 Aug 2006; Jason Wever <weeve@gentoo.org> gawk-3.1.5-r2.ebuild:
  Stable on SPARC wrt bug #142936.

*gawk-3.1.5-r2 (17 Jul 2006)

  17 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +files/gawk-3.1.5-autotools-crap.patch, +files/gawk-3.1.5-internal.patch,