@@ -1,3 +1,0 @@
-MD5 4760325489479cac17fe0114b8f62f30 gawk-3.1.5.tar.gz 2310919
-RMD160 8d875f4ea9e9ef5c932468cf43c691f6e082b197 gawk-3.1.5.tar.gz 2310919
-SHA256 463dcb9d0ca398b1d4f5a332f6cd9cec56441265fca616f2ea1b44d459e9f0f8 gawk-3.1.5.tar.gz 2310919
