@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/gawk
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.100 2007/04/01 10:16:10 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.101 2007/04/16 08:02:22 corsair Exp $
+
+  16 Apr 2007; Markus Rothe <corsair@gentoo.org> gawk-3.1.5-r3.ebuild:
+  Stable on ppc64
 
   01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org> gawk-3.1.5-r3.ebuild:
   Stable on ppc.
